  very weak typing on array keys.
* (bug 12136) Extend allowed characters in JSON callback to ][.'"_A-Za-z0-9
* (bug 11673) Return error 'unknown_action' in specified format
* (bug 13618) Added rcprop=redirect and rcshow=redirect to list=recentchanges
* (bug 13544) Added oldid parameter to action=parse to allow for parsing of old revisions

=== Languages updated in 1.13 ===

* Afrikaans (af)
* Gheg Albanian (aln)
* Amharic (am)
* Aragonese (an)
* Old English (ang)
* Arabic (ar)
* Aramaic (arc)
* Araucanian (arn)
* Egyptian Spoken Arabic (arz) (new)
* Asturian (ast)
* Kotava (avk)
* Samogitian (bat-smg)
* Bikol Central (bcl)
* Belarusian (be)
* Bulgarian (bg)
* Bihari (bh)
* Bengali (bn)
* Breton (br)
* Bosnian (bs)
* Buginese (bug)
* Catalan (ca)
* Min Dong Chinese (cdo)
* Corsican (co)
* Crimean Turkish (Cyrillic) (crh-cyrl)
* Crimean Turkish (Latin) (crh-latn)
* Czech (cs)
* Kashubian (csb)
* Church Slavic (cu)
* Welsh (cy)
* Danish (da)
* Zazaki (diq)
* Dalecarlian (dlc)
* Lower Sorbian (dsb)
* Middle Dutch (dum) (removed)
* Divehi (dv)
* Dzongkha (dz)
* Greek (el)
* English (en)
* British English (en-gb) (new)
* Esperanto (eo)
* Spanish (es)
* Estonian (et)
* Basque (eu)
* Extremaduran (ext)
* Finnish (fi)
* Võro (fiu-vro)
* Faroese (fo)
* French (fr)
* Cajun French (frc)
* Franco-Provençal (frp)
* Friulian (fur)
* Western Frisian (fy)
* Irish (ga)
* Gagauz (gag)
* Gan (gan)
* Galician (gl)
* Swiss German (gsw)
* Gujarati (gu)
* Hakka (hak)
* Hawaiian (haw)
* Hindi (hi)
* Fiji Hindi (Latin) (hif-latn) (new)
* Croatian (hr)
* Upper Sorbian (hsb)
* Haitian (ht)
* Hungarian (hu)
* Armenian (hy)
* Interlingua (ia)
* Indonesian (id)
* Eastern Canadian (Unified Canadian Aboriginal Syllabics) (ike-cans)
* Eastern Canadian (Latin) (ike-latn)
* Iloko (ilo)
* Ido (io)
* Icelandic (is)
* Italian (it)
* Japanese (ja)
* Jutish (jut)
* Javanese (jv)
* Georgian (ka)
* Kara-Kalpak (kaa)
* Kabyle (kab)
* Kazakh (Arabic script) (kk-arab)
* Kazakh (Cyrillic script) (kk-cyrl)