@@ -224,6 +224,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 11673) Return error 'unknown_action' in specified format
 * (bug 13618) Added rcprop=redirect and rcshow=redirect to list=recentchanges
 * (bug 13544) Added oldid parameter to action=parse to allow for parsing of old revisions
+* (bug 13718) Return the proper continue parameter for cmsort=timestamp
 
 === Languages updated in 1.13 ===
 
